01-data_consolidad 02-dataviz

--- a/01-data-consolidada.ipynb
+++ b/01-data-consolidada.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base Homologada: Revisar-"
+    "# Base Homologada\n",
+    "\n",
+    "Javiera Baeza\n",
+    "Matías Deneken\n",
+    "Florencia Pampaloni"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +41,7 @@
       "3  2020                             Nutrición y Dietética   \n",
       "4  2020  Traducción/Interpretación en Idiomas Extranjeros   \n",
       "\n",
-      "               INGRESO  PTJE PONDERADO  PTJE_PONDERADO_PACE NACIONALIDAD  \\\n",
+      "               INGRESO  PTJE_PONDERADO  PTJE_PONDERADO_PACE NACIONALIDAD  \\\n",
       "0  Técnico Profesional          644.40                  NaN      Chilena   \n",
       "1  Técnico Profesional          646.95                  NaN      Chilena   \n",
       "2  Técnico Profesional          641.40                  NaN      Chilena   \n",
@@ -98,7 +102,7 @@
          "type": "string"
         },
         {
-         "name": "PTJE PONDERADO",
+         "name": "PTJE_PONDERADO",
          "rawType": "float64",
          "type": "float"
         },
@@ -184,7 +188,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "941bfb50-ab12-405c-9eb6-c6abd2d9f70e",
+       "ref": "3ca9c844-1408-4edc-887b-d54100ad3c5c",
        "rows": [
         [
          "0",
@@ -1364,7 +1368,7 @@
        "      <th>anio</th>\n",
        "      <th>CARRERA</th>\n",
        "      <th>INGRESO</th>\n",
-       "      <th>PTJE PONDERADO</th>\n",
+       "      <th>PTJE_PONDERADO</th>\n",
        "      <th>PTJE_PONDERADO_PACE</th>\n",
        "      <th>NACIONALIDAD</th>\n",
        "      <th>SEXO</th>\n",
@@ -1656,7 +1660,7 @@
        "30110  2022                                               Nan   \n",
        "30111  2025                                               Nan   \n",
        "\n",
-       "                                     INGRESO  PTJE PONDERADO  \\\n",
+       "                                     INGRESO  PTJE_PONDERADO  \\\n",
        "0                        Técnico Profesional          644.40   \n",
        "1                        Técnico Profesional          646.95   \n",
        "2                        Técnico Profesional          641.40   \n",
@@ -1737,7 +1741,7 @@
        "[30112 rows x 20 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1862,24 +1866,23 @@
      "output_type": "stream",
      "text": [
       "                                  INGRESO\n",
-      "0                     Arte-Ciencia-Letras\n",
-      "1                            Bachillerato\n",
-      "2        Buen Rendimiento Enseñanza Media\n",
-      "3                    Colegios Vulnerables\n",
-      "4             Deportista Alto Rendimiento\n",
-      "5   Destacado en Artes, Ciencias o Letras\n",
-      "6                                   Etnia\n",
-      "7                    Excelencia Académica\n",
-      "8                               Excepción\n",
-      "9                                 Explora\n",
-      "10                 Formación Propedéutica\n",
-      "11                                 Género\n",
-      "12                    Hijo de Funcionario\n",
-      "13                       Mejores Puntajes\n",
-      "14                                   PACE\n",
-      "15                                Regular\n",
-      "16                    Técnico Profesional\n",
-      "17                                    nan\n"
+      "0                            Bachillerato\n",
+      "1        Buen Rendimiento Enseñanza Media\n",
+      "2                    Colegios Vulnerables\n",
+      "3             Deportista Alto Rendimiento\n",
+      "4   Destacado en Artes, Ciencias o Letras\n",
+      "5                                   Etnia\n",
+      "6                    Excelencia Académica\n",
+      "7                               Excepción\n",
+      "8                                 Explora\n",
+      "9                  Formación Propedéutica\n",
+      "10                                 Género\n",
+      "11                    Hijo de Funcionario\n",
+      "12                       Mejores Puntajes\n",
+      "13                                   PACE\n",
+      "14                                Regular\n",
+      "15                    Técnico Profesional\n",
+      "16                                    nan\n"
      ]
     }
    ],
@@ -1898,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1951,9 +1954,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (base)",
+   "display_name": "base",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
